--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "chunk": "0.0.3",
     "core-js": "^3.6.5",
+    "jwt-decode": "^3.1.2",
     "vue": "^2.6.11",
+    "vue-js-modal": "^2.0.0-rc.6",
+    "vue-my-toasts": "^1.0.5",
     "vue-router": "^3.2.0",
+    "vue-toasted": "^1.1.28",
+    "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -22,6 +29,12 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "node-sass": "^5.0.0",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.1.1",
+    "vue-cli-plugin-vuetify": "~2.1.0",
+    "vue-flip": "^1.0.2",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   }
 }
